Fix layout issue.

--- a/_sass/custom/_custom_layout.scss
+++ b/_sass/custom/_custom_layout.scss
@@ -1,7 +1,4 @@
-.item {
-  width : 30%;
-}
-.c-page__main div {
+.main-grid {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
